--- a/app/popup.html
+++ b/app/popup.html
@@ -2,15 +2,19 @@
   <head></head>
   <body>
     <h1>We're running a Chrome extension!</h1>
+
+    <h2>Your Current Tabs</h2>
     <p id="demo"></p>
     <ul id="lol">
     </ul>
+
     <h2> Other Features</h2>
     <button id="TwitterHome">Twitter HomePage</button>
     <button id="TwitterPost">Twitter Post</button>
     <button id="notion">Notion</button>
     <button id="GetHelp">Help</button>
     <button id="GmailInBox">Gmail InBox</button>
+    <button id="GithubRepo">New Github Repo</button>
     
     <script async src="./popup.js"></script>
   </body>
