--- a/app/popup.html
+++ b/app/popup.html
@@ -1,7 +1,10 @@
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="./styles/main.scss"
+  </head>
   <body>
     <h1>We're running a Chrome extension!</h1>
+    <input id="SuperCharge-Input" />
 
     <h2>Your Current Tabs</h2>
     <p id="demo"></p>
@@ -15,6 +18,8 @@
     <button id="GetHelp">Help</button>
     <button id="GmailInBox">Gmail InBox</button>
     <button id="GithubRepo">New Github Repo</button>
+
+    <h3>50 Results Avaliable</h3>
     
     <script async src="./popup.js"></script>
   </body>
