--- a/app/popup.html
+++ b/app/popup.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>We're running a Chrome extension!</h1>
-    <input id="SuperCharge-Input" />
+    <input id="SuperCharge-Input"  placeholder="Type A Command Or Search/" >
 
     <h2>Your Current Tabs</h2>
     <p id="demo"></p>
@@ -20,7 +20,10 @@
     <button id="GithubRepo">New Github Repo</button>
 
     <h3>50 Results Avaliable</h3>
+    <p class="SearchBox"></p>
     
     <script async src="./popup.js"></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+
   </body>
 </html>
