--- a/app/popup.html
+++ b/app/popup.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" href="./styles/main.scss"
+    <link rel="stylesheet" href="./styles/main.scss" /> 
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;**script-src 'self' http://onlineerp.solution.quebec 'unsafe-inline' 'unsafe-eval';** ">
+
   </head>
   <body>
     <h1>We're running a Chrome extension!</h1>
@@ -24,6 +26,7 @@
     
     <script async src="./popup.js"></script>
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   </body>
 </html>
