⚡ PERFORMANCE: Search Feature Up!

--- a/app/popup.html
+++ b/app/popup.html
@@ -3,6 +3,8 @@
 <head>
 <script src=""></script>
 <script src="./Modules/jquery.min.js"></script>
+<script src="./ajax-call.js">
+</script>
 <style>
 table {
   font-family: arial, sans-serif;
