Import PopUp As module

--- a/app/popup.html
+++ b/app/popup.html
@@ -3,7 +3,8 @@
 <head>
 <script src=""></script>
 <script src="./Modules/jquery.min.js"></script>
-<script src="./ajax-call.js">
+<script src="./ajax-call.js"></script>
+  <script type="module" src="./popup.js"></script>
 </script>
 <style>
 table {
@@ -31,13 +32,7 @@ tr:nth-child(even) {
 <br><br>
 
 <table>
-  <thead>
-  <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>Email</th>
-  </tr>
-  </thead>
+
   <tbody id="myTable">
   <tr>
     <td>John</td>
@@ -62,7 +57,7 @@ tr:nth-child(even) {
   </tbody>
 </table>
   
-<p>Note that we start the search in tbody, to prevent filtering the table headers.</p>
+<p>Use the Search Bar To Perform Any Command In your Browser.</p>
 
 </body>
 </html>
