popUp.js Code Base feat

--- a/app/popup.html
+++ b/app/popup.html
@@ -26,8 +26,8 @@ tr:nth-child(even) {
 </head>
 <body>
 
-<h2>Filterable Table</h2>
-<p>Type something in the input field to search the table for first names, last names or emails:</p>  
+  <h1>Current Tabs Are:</h1>
+<p id="lol"></p>
 <input id="myInput" type="text" placeholder="Search..">
 <br><br>
 
@@ -56,6 +56,7 @@ tr:nth-child(even) {
   </tr>
   </tbody>
 </table>
+<p>50 Results Are Avaliable</p>
   
 <p>Use the Search Bar To Perform Any Command In your Browser.</p>
 
